@@ -71,6 +71,7 @@ conf/i386-efi.mk
 conf/i386-efi.rmk
 conf/i386-ieee1275.mk
 conf/i386-ieee1275.rmk
+conf/i386-pc-cygwin-img-ld.sc
 conf/i386-pc.mk
 conf/i386-pc.rmk
 conf/powerpc-ieee1275.mk
@@ -90,6 +91,10 @@ disk/efi/efidisk.c
 disk/i386/pc/biosdisk.c
 disk/ieee1275/nand.c
 disk/ieee1275/ofdisk.c
+docs/fdl.texi
+docs/grub.cfg
+docs/grub.texi
+docs/texinfo.tex
 font/manager.c
 fs/affs.c
 fs/afs.c
@@ -112,8 +117,8 @@ fs/xfs.c
 fs/i386/pc/pxe.c
 hello/hello.c
 hook/datehook.c
-include/multiboot.h
 include/multiboot2.h
+include/multiboot.h
 include/grub/acorn_filecore.h
 include/grub/aout.h
 include/grub/arg.h
@@ -140,16 +145,16 @@ include/grub/loader.h
 include/grub/lvm.h
 include/grub/misc.h
 include/grub/mm.h
-include/grub/multiboot.h
 include/grub/multiboot2.h
+include/grub/multiboot.h
 include/grub/multiboot_loader.h
 include/grub/net.h
 include/grub/normal.h
 include/grub/ntfs.h
 include/grub/parser.h
 include/grub/partition.h
-include/grub/pc_partition.h
 include/grub/pci.h
+include/grub/pc_partition.h
 include/grub/raid.h
 include/grub/rescue.h
 include/grub/script.h
@@ -163,8 +168,8 @@ include/grub/types.h
 include/grub/video.h
 include/grub/efi/api.h
 include/grub/efi/chainloader.h
-include/grub/efi/console.h
 include/grub/efi/console_control.h
+include/grub/efi/console.h
 include/grub/efi/disk.h
 include/grub/efi/efi.h
 include/grub/efi/pe32.h
@@ -218,22 +223,22 @@ include/grub/i386/pc/memory.h
 include/grub/i386/pc/pxe.h
 include/grub/i386/pc/serial.h
 include/grub/i386/pc/time.h
-include/grub/i386/pc/vbe.h
 include/grub/i386/pc/vbeblit.h
 include/grub/i386/pc/vbefill.h
+include/grub/i386/pc/vbe.h
 include/grub/i386/pc/vbeutil.h
 include/grub/i386/pc/vga.h
 include/grub/ieee1275/ieee1275.h
 include/grub/ieee1275/ofdisk.h
+include/grub/lib/crc.h
+include/grub/lib/datetime.h
+include/grub/lib/envblk.h
+include/grub/lib/hexdump.h
 include/grub/lib/LzFind.h
 include/grub/lib/LzHash.h
 include/grub/lib/LzmaDec.h
 include/grub/lib/LzmaEnc.h
 include/grub/lib/LzmaTypes.h
-include/grub/lib/crc.h
-include/grub/lib/datetime.h
-include/grub/lib/envblk.h
-include/grub/lib/hexdump.h
 include/grub/powerpc/kernel.h
 include/grub/powerpc/libgcc.h
 include/grub/powerpc/setjmp.h
@@ -327,13 +332,13 @@ kern/sparc64/ieee1275/openfw.c
 kern/x86_64/dl.c
 kern/x86_64/efi/callwrap.S
 kern/x86_64/efi/startup.S
-lib/LzFind.c
-lib/LzmaDec.c
-lib/LzmaEnc.c
 lib/crc.c
 lib/datetime.c
 lib/envblk.c
 lib/hexdump.c
+lib/LzFind.c
+lib/LzmaDec.c
+lib/LzmaEnc.c
 lib/efi/datetime.c
 lib/i386/datetime.c
 loader/aout.c
@@ -353,8 +358,8 @@ loader/i386/pc/chainloader.c
 loader/i386/pc/chainloader_normal.c
 loader/i386/pc/linux.c
 loader/i386/pc/linux_normal.c
-loader/i386/pc/multiboot.c
 loader/i386/pc/multiboot2.c
+loader/i386/pc/multiboot.c
 loader/i386/pc/multiboot_normal.c
 loader/ieee1275/multiboot2.c
 loader/powerpc/ieee1275/linux.c
@@ -371,6 +376,7 @@ normal/main.c
 normal/menu.c
 normal/menu_entry.c
 normal/misc.c
+normal/parser.y
 normal/script.c
 normal/i386/setjmp.S
 normal/powerpc/setjmp.S
@@ -418,6 +424,7 @@ util/grub.d/10_linux.in
 util/grub.d/10_windows.in
 util/grub.d/30_os-prober.in
 util/grub.d/40_custom.in
+util/grub.d/README
 util/i386/get_disk_name.c
 util/i386/efi/grub-install.in
 util/i386/efi/grub-mkimage.c
@@ -432,8 +439,8 @@ util/powerpc/ieee1275/grub-mkrescue.in
 util/powerpc/ieee1275/misc.c
 video/bitmap.c
 video/video.c
-video/i386/pc/vbe.c
 video/i386/pc/vbeblit.c
+video/i386/pc/vbe.c
 video/i386/pc/vbefill.c
 video/i386/pc/vbeutil.c
 video/readers/jpeg.c
