@@ -32,8 +32,9 @@ cd $dir
 
 for dir in $DISTDIRS; do
   for d in `find $dir -type d | sort`; do
-    find $d -maxdepth 1 -name '*.[chS]' -o -name '*.mk' -o -name '*.rmk' \
-      -o -name '*.rb' -o -name '*.in' \
+    find $d -maxdepth 1 -name '*.[chSy]' -o -name '*.mk' -o -name '*.rmk' \
+      -o -name '*.rb' -o -name '*.in' -o -name '*.tex' -o -name '*.texi' \
+      -o -name 'grub.cfg' -o -name 'README' -o -name '*.sc' -o -name 'mdate.sh' \
       | sort
   done
 done
